--- a/quote-generator/index.html
+++ b/quote-generator/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>Quote generator</title>
+    <link rel="stylesheet" href="./css/resets.css" />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <div id="app"></div>
-    <script type="module" src="/main.js"></script>
+    <script type="module" src="./js/script.js"></script>
   </body>
 </html>
