--- a/quote-generator/index.html
+++ b/quote-generator/index.html
@@ -22,6 +22,16 @@
     <i class="fa-solid fa-sync fa-spin"></i>
   </div>
 
+  <!-- Loader -->
+  <div class="lds-ring-container">
+    <div class="lds-ring">
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+    </div>
+  </div>
+
   <div class="container">
     <div class="quote flex flex-col space-y-2">
       <p class="quote__text">
