--- a/quote-generator/index.html
+++ b/quote-generator/index.html
@@ -22,7 +22,7 @@
     <i class="fa-solid fa-sync fa-spin"></i>
   </div>
 
-  <!-- Loader -->
+  <!-- Loader - with javascript just add .active class dynamically  -->
   <div class="lds-ring-container">
     <div class="lds-ring">
       <div></div>
