--- a/quote-generator/index.html
+++ b/quote-generator/index.html
@@ -2,57 +2,53 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Quote generator</title>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Quote generator</title>
 
-  <link rel="preconnect" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css" />
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&display=swap" rel="stylesheet" />
+    <link rel="preconnect" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&display=swap" rel="stylesheet" />
 
-  <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/styles.css" />
 </head>
 
 <body id="#__next" class="flex items-center justify-center">
 
-  <div class="generate-quote">
-    <span>Random</span>
-    <i class="fa-solid fa-sync fa-spin"></i>
-  </div>
-
-  <!-- Loader - with javascript just add .active class dynamically  -->
-  <div class="lds-ring-container">
-    <div class="lds-ring">
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
+    <div class="generate-quote">
+        <span>Random</span>
+        <i class="fa-solid fa-sync fa-spin"></i>
     </div>
-  </div>
 
-  <div class="container">
-    <div class="quote flex flex-col space-y-2">
-      <p class="quote__text">
-        The first rule of any technology used in a business is that automation applied to an efficient operation will
-        magnify the efficiency. The second is that automation applied to an inefficient operation will magnify the
-        inefficiency.
-      </p>
-      <div class="flex items-center justify-between quote__info cursor-pointer">
-        <div class="flex flex-col">
-          <h1 class="quote__author">Bill Gates</h1>
-          <span class="quote__category">Business</span>
+    <!-- Loader - with javascript just add .active class dynamically  -->
+    <div class="lds-ring-container" onclick="makeActive()">
+        <div class="lds-ring">
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
         </div>
-        <i class="fa-solid fa-arrow-right" style="color: var(--white)"></i>
-      </div>
     </div>
-  </div>
 
-  <script type="module" src="./js/script.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/js/all.min.js"
-    integrity="sha512-8pHNiqTlsrRjVD4A/3va++W1sMbUHwWxxRPWNyVlql3T+Hgfd81Qc6FC5WMXDC+tSauxxzp1tgiAvSKFu1qIlA=="
-    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <div class="container">
+        <div class="quote flex flex-col space-y-2">
+            <p class="quote__text">
+                The first rule of any technology used in a business is that automation applied to an efficient operation will magnify the efficiency. The second is that automation applied to an inefficient operation will magnify the inefficiency.
+            </p>
+            <div class="flex items-center justify-between quote__info cursor-pointer">
+                <div class="flex flex-col">
+                    <h1 class="quote__author">Bill Gates</h1>
+                    <span class="quote__category">Business</span>
+                </div>
+                <i class="fa-solid fa-arrow-right" style="color: var(--white)"></i>
+            </div>
+        </div>
+    </div>
+
+    <script type="module" src="./js/script.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/js/all.min.js" integrity="sha512-8pHNiqTlsrRjVD4A/3va++W1sMbUHwWxxRPWNyVlql3T+Hgfd81Qc6FC5WMXDC+tSauxxzp1tgiAvSKFu1qIlA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 </body>
 
 </html>
