--- a/quote-generator/index.html
+++ b/quote-generator/index.html
@@ -13,17 +13,19 @@
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&display=swap" rel="stylesheet" />
 
     <link rel="stylesheet" href="./css/styles.css" />
+    <script type="module" src="./js/script.js"></script>
+
 </head>
 
 <body id="#__next" class="flex items-center justify-center">
 
-    <div class="generate-quote">
+    <div class="generate-quote" onclick="makeActive">
         <span>Random</span>
         <i class="fa-solid fa-sync fa-spin"></i>
     </div>
 
     <!-- Loader - with javascript just add .active class dynamically  -->
-    <div class="lds-ring-container" onclick="makeActive()">
+    <div class="lds-ring-container">
         <div class="lds-ring">
             <div></div>
             <div></div>
@@ -46,9 +48,8 @@
             </div>
         </div>
     </div>
-
-    <script type="module" src="./js/script.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/js/all.min.js" integrity="sha512-8pHNiqTlsrRjVD4A/3va++W1sMbUHwWxxRPWNyVlql3T+Hgfd81Qc6FC5WMXDC+tSauxxzp1tgiAvSKFu1qIlA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 </body>
+
 
 </html>
